Moved assets in to src Formatting in Game subclasses Add border to MenuPanel